--- a/public/frontEnd/css/style.css
+++ b/public/frontEnd/css/style.css
@@ -3018,7 +3018,7 @@ section.product-inner {
 .pro_img img {
     height: 100%;
     width: 100%;
-    /*object-fit: contain;*/
+    object-fit: contain;
     transition: 0.35s all;
 }
 
